--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -83,3 +83,42 @@
     }
 }
 /* End Background Animation */
+
+/* Supprimer le border-radius pour les divs générées par DataTable */
+/* Aucune autre solution trouvé */
+.hZZlND, .rdt_Table {
+  border-radius: 0 !important;
+}
+
+/* Style de base pour rendre la checkbox ronde */
+.rdt_Table input[type="checkbox"] {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    border: 2px solid #6366f1;
+    appearance: none;
+    outline: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease, border-color 0.2s ease;
+}
+
+/* Style lorsqu'elle est cochée */
+.rdt_Table input[type="checkbox"]:checked {
+    background-color: #6366f1;
+    border-color: #6366f1;
+    position: relative;
+}
+
+/* Icône X à l'intérieur de la checkbox cochée */
+.rdt_Table input[type="checkbox"]:checked::after {
+    content: '✕';
+    color: white;
+    font-size: 0.5rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -52%);
+}
+
+  
+  
